--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/flatlaf-dashboard
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout-RELEASE180.jar=lib/AbsoluteLayout-RELEASE180.jar
+file.reference.batik-swing-1.7.jar=lib\\batik-swing-1.7.jar
 file.reference.commons-codec-1.15.jar=lib/commons-codec-1.15.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.flatlaf-3.1.1.jar=lib/flatlaf-3.1.1.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.jackson-core-2.15.2.jar}:\
     ${file.reference.jackson-databind-2.15.2.jar}:\
     ${file.reference.svgSalamander-1.1.4.jar}:\
-    ${file.reference.swing-toast-notifications-1.0.0.jar}
+    ${file.reference.swing-toast-notifications-1.0.0.jar}:\
+    ${file.reference.batik-swing-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
