--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.httpcore-4.4.13.jar=lib/httpcore-4.4.13.jar
 file.reference.jackson-annotations-2.15.2.jar=lib/jackson-annotations-2.15.2.jar
 file.reference.jackson-core-2.15.2.jar=lib/jackson-core-2.15.2.jar
 file.reference.jackson-databind-2.15.2.jar=lib/jackson-databind-2.15.2.jar
+file.reference.json-20230618.jar=lib\\json-20230618.jar
 file.reference.svgSalamander-1.1.4.jar=lib/svgSalamander-1.1.4.jar
 file.reference.swing-toast-notifications-1.0.0.jar=lib/swing-toast-notifications-1.0.0.jar
 includes=**
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.15.2.jar}:\
     ${file.reference.svgSalamander-1.1.4.jar}:\
     ${file.reference.swing-toast-notifications-1.0.0.jar}:\
-    ${file.reference.batik-swing-1.7.jar}
+    ${file.reference.batik-swing-1.7.jar}:\
+    ${file.reference.json-20230618.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
