Adicionado tela de criação ticket, detalhamento funcional e Dicionario

--- a/src/raven/theme/FlatDarkLaf.properties
+++ b/src/raven/theme/FlatDarkLaf.properties
@@ -1,6 +1,8 @@
 
 @background=rgb(49,62,74)
 @foreground=rgb(240,240,240)
+@bar=rgb(66, 71, 76)
+
 
 Menu.background=darken(@background,10%)
 Menu.foreground=@foreground
@@ -9,10 +11,14 @@ Menu.arrowColor=lighten($Menu.background,40%)
 Menu.lightdark.background=lighten($Menu.background,5%)
 Menu.lightdark.button.background=tint($Menu.lightdark.background,20%)
 Menu.title.foreground=darken($Menu.foreground,40%)
-Menu.button.background=lighten(@background,5%)
+Menu.button.background=lighten(@background,0%)
 Menu.button.selectedBackground=lighten($Menu.background,5%)
 Menu.button.selectedForeground=$Menu.foreground
+Input=rgb(27, 29, 35)
 
+Bar.background=lighten(@bar, 2%)
+Panel.left.background=rgb(44, 49, 60)
+Panel.right.background=rgb(57, 65, 80)
 Menu.ScrollBar.background=$Menu.background
 Menu.ScrollBar.thumb=lighten($Menu.background,10%)
 
