--- a/src/raven/theme/FlatLightLaf.properties
+++ b/src/raven/theme/FlatLightLaf.properties
@@ -1,6 +1,7 @@
 
 @foreground=rgb(60,60,60)
 @background=rgb(250,250,250)
+@bar=rgb(36, 104, 155)
 
 Menu.background=rgb(36, 104, 155)
 Menu.foreground=rgb(245,245,245)
@@ -12,7 +13,11 @@ Menu.title.foreground=darken($Menu.foreground,25%)
 Menu.button.background=darken(@background,10%)
 Menu.button.selectedBackground=darken($Menu.background,5%)
 Menu.button.selectedForeground=$Menu.foreground
+Input=rgb(255, 255, 255)
 
+Bar.background=darken(@bar, 10%)
+Panel.left.background=darken(@background, 20%)
+Panel.right.background=darken(@background, 10%)
 Menu.ScrollBar.background=$Menu.background
 Menu.ScrollBar.thumb=mix($Menu.background,$Menu.foreground,40%)
 
