Sistema completo até então

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,14 +39,17 @@ file.reference.AbsoluteLayout-RELEASE180.jar=lib/AbsoluteLayout-RELEASE180.jar
 file.reference.batik-swing-1.7.jar=lib\\batik-swing-1.7.jar
 file.reference.commons-codec-1.15.jar=lib/commons-codec-1.15.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.commons-text-1.10.0.jar=lib\\commons-text-1.10.0.jar
 file.reference.flatlaf-3.1.1.jar=lib/flatlaf-3.1.1.jar
 file.reference.flatlaf-extras-3.1.1.jar=lib/flatlaf-extras-3.1.1.jar
 file.reference.httpclient-4.5.13.jar=lib/httpclient-4.5.13.jar
 file.reference.httpcore-4.4.13.jar=lib/httpcore-4.4.13.jar
+file.reference.httpmime-4.3.1.jar=lib\\httpmime-4.3.1.jar
 file.reference.jackson-annotations-2.15.2.jar=lib/jackson-annotations-2.15.2.jar
 file.reference.jackson-core-2.15.2.jar=lib/jackson-core-2.15.2.jar
 file.reference.jackson-databind-2.15.2.jar=lib/jackson-databind-2.15.2.jar
 file.reference.json-20230618.jar=lib\\json-20230618.jar
+file.reference.jsoup-1.16.1.jar=lib\\jsoup-1.16.1.jar
 file.reference.svgSalamander-1.1.4.jar=lib/svgSalamander-1.1.4.jar
 file.reference.swing-toast-notifications-1.0.0.jar=lib/swing-toast-notifications-1.0.0.jar
 includes=**
@@ -65,7 +68,10 @@ javac.classpath=\
     ${file.reference.svgSalamander-1.1.4.jar}:\
     ${file.reference.swing-toast-notifications-1.0.0.jar}:\
     ${file.reference.batik-swing-1.7.jar}:\
-    ${file.reference.json-20230618.jar}
+    ${file.reference.json-20230618.jar}:\
+    ${file.reference.httpmime-4.3.1.jar}:\
+    ${file.reference.commons-text-1.10.0.jar}:\
+    ${file.reference.jsoup-1.16.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
