--- a/src/raven/theme/FlatDarkLaf.properties
+++ b/src/raven/theme/FlatDarkLaf.properties
@@ -2,7 +2,7 @@
 @background=rgb(49,62,74)
 @foreground=rgb(240,240,240)
 @bar=rgb(66, 71, 76)
-
+@hbbar=rgb(39, 44, 54)
 
 Menu.background=darken(@background,10%)
 Menu.foreground=@foreground
@@ -15,6 +15,7 @@ Menu.button.background=lighten(@background,0%)
 Menu.button.selectedBackground=lighten($Menu.background,5%)
 Menu.button.selectedForeground=$Menu.foreground
 Input=rgb(27, 29, 35)
+bar.hbbar=@hbbar
 
 Bar.background=lighten(@bar, 2%)
 Panel.left.background=rgb(44, 49, 60)
