--- a/src/raven/theme/FlatLightLaf.properties
+++ b/src/raven/theme/FlatLightLaf.properties
@@ -2,6 +2,7 @@
 @foreground=rgb(60,60,60)
 @background=rgb(250,250,250)
 @bar=rgb(36, 104, 155)
+@hbbar=rgb(39, 44, 54)
 
 Menu.background=rgb(36, 104, 155)
 Menu.foreground=rgb(245,245,245)
@@ -14,6 +15,7 @@ Menu.button.background=darken(@background,10%)
 Menu.button.selectedBackground=darken($Menu.background,5%)
 Menu.button.selectedForeground=$Menu.foreground
 Input=rgb(255, 255, 255)
+bar.hbbar=lighten(@hbbar, 50%)
 
 Bar.background=darken(@bar, 10%)
 Panel.left.background=darken(@background, 20%)
