--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,6 +50,9 @@ file.reference.jackson-core-2.15.2.jar=lib/jackson-core-2.15.2.jar
 file.reference.jackson-databind-2.15.2.jar=lib/jackson-databind-2.15.2.jar
 file.reference.json-20230618.jar=lib\\json-20230618.jar
 file.reference.jsoup-1.16.1.jar=lib\\jsoup-1.16.1.jar
+file.reference.okhttp-2.7.5.jar=lib\\okhttp-2.7.5.jar
+file.reference.okhttp-3.14.9.jar=lib\\okhttp-3.14.9.jar
+file.reference.okhttp-4.10.0.jar=lib\\okhttp-4.10.0.jar
 file.reference.svgSalamander-1.1.4.jar=lib/svgSalamander-1.1.4.jar
 file.reference.swing-toast-notifications-1.0.0.jar=lib/swing-toast-notifications-1.0.0.jar
 includes=**
@@ -71,7 +74,10 @@ javac.classpath=\
     ${file.reference.json-20230618.jar}:\
     ${file.reference.httpmime-4.3.1.jar}:\
     ${file.reference.commons-text-1.10.0.jar}:\
-    ${file.reference.jsoup-1.16.1.jar}
+    ${file.reference.jsoup-1.16.1.jar}:\
+    ${file.reference.okhttp-2.7.5.jar}:\
+    ${file.reference.okhttp-3.14.9.jar}:\
+    ${file.reference.okhttp-4.10.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
