alterado alguns procedimentos

--- a/src/raven/theme/FlatDarkLaf.properties
+++ b/src/raven/theme/FlatDarkLaf.properties
@@ -15,7 +15,7 @@ Menu.button.background=lighten(@background,0%)
 Menu.button.selectedBackground=lighten($Menu.background,5%)
 Menu.button.selectedForeground=$Menu.foreground
 Input=rgb(27, 29, 35)
-bar.hbbar=@hbbar
+bar.hbbar=darken(@hbbar,10%)
 
 Bar.background=lighten(@bar, 2%)
 Panel.left.background=rgb(44, 49, 60)
