--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=flatlaf-dashboard
 application.vendor=RAVEN
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -56,7 +57,9 @@ file.reference.okhttp-4.10.0.jar=lib\\okhttp-4.10.0.jar
 file.reference.svgSalamander-1.1.4.jar=lib/svgSalamander-1.1.4.jar
 file.reference.swing-toast-notifications-1.0.0.jar=lib/swing-toast-notifications-1.0.0.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.AbsoluteLayout-RELEASE180.jar}:\
     ${file.reference.commons-codec-1.15.jar}:\
@@ -113,12 +116,29 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=flatlaf-dashboard
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=raven.application.Application
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 no.dependencies=true
-platform.active=JDK_11
+platform.active=java_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
