--- a/src/raven/theme/FlatLightLaf.properties
+++ b/src/raven/theme/FlatLightLaf.properties
@@ -16,6 +16,8 @@ Menu.button.selectedBackground=darken($Menu.background,5%)
 Menu.button.selectedForeground=$Menu.foreground
 Input=rgb(255, 255, 255)
 bar.hbbar=lighten(@hbbar, 50%)
+Menu.hbbar.right=lighten(@hbbar,1%)
+Menu.hbbar.left=lighten(@hbbar,3%)
 
 Bar.background=darken(@bar, 10%)
 Panel.left.background=darken(@background, 20%)
