adicionado bell e send icon

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,8 @@ file.reference.httpmime-4.3.1.jar=lib\\httpmime-4.3.1.jar
 file.reference.jackson-annotations-2.15.2.jar=lib/jackson-annotations-2.15.2.jar
 file.reference.jackson-core-2.15.2.jar=lib/jackson-core-2.15.2.jar
 file.reference.jackson-databind-2.15.2.jar=lib/jackson-databind-2.15.2.jar
+file.reference.jna-3.0.9.jar=lib\\jna-3.0.9.jar
+file.reference.jna-platform-win32.jar=lib\\jna-platform-win32.jar
 file.reference.json-20230618.jar=lib\\json-20230618.jar
 file.reference.jsoup-1.16.1.jar=lib\\jsoup-1.16.1.jar
 file.reference.okhttp-2.7.5.jar=lib\\okhttp-2.7.5.jar
@@ -80,7 +82,9 @@ javac.classpath=\
     ${file.reference.jsoup-1.16.1.jar}:\
     ${file.reference.okhttp-2.7.5.jar}:\
     ${file.reference.okhttp-3.14.9.jar}:\
-    ${file.reference.okhttp-4.10.0.jar}
+    ${file.reference.okhttp-4.10.0.jar}:\
+    ${file.reference.jna-3.0.9.jar}:\
+    ${file.reference.jna-platform-win32.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -138,7 +142,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 no.dependencies=true
-platform.active=java_11
+platform.active=JDK_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
