--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -142,7 +142,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 no.dependencies=true
-platform.active=JDK_11
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
